--- a/src/sass/blocks/controls.scss
+++ b/src/sass/blocks/controls.scss
@@ -3,8 +3,9 @@
     &__down {
         display: block;
         background-color: #fff;
-        width: 40px;
-        height: 50px;
+        width: 35px;
+        height: 40px;
+        padding: 5px;
         border: none;
 
         position: absolute;
